--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Диплом курса «Базовый JavaScript в браузере»</title>
+    <link rel="icon" href="../img/icon.png">
+
+    <title>Track Finance App</title>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
           integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
@@ -53,40 +56,40 @@
                 <div class="transactions-panel">
                     <button class="btn btn-success btn-block create-income-button">
                         <span class="fa fa-thumbs-o-up"></span>
-                        Доход
+                        Income
                     </button>
                     <button class="btn btn-danger btn-block create-expense-button">
                         <span class="fa fa-thumbs-o-down"></span>
-                        Расход
+                        Expense
                     </button>
                 </div>
                 <ul class="sidebar-menu" data-widget="tree">
                     <li class="header">
-                        Авторизация
+                        Authorization
                     </li>
                     <li class="menu-item menu-item_login">
                         <a href="#">
-                            <span>Вход</span>
+                            <span>Log In</span>
                         </a>
                     </li>
                     <li class="menu-item menu-item_register">
                         <a href="#">
-                            <span>Регистрация</span>
+                            <span>Register</span>
                         </a>
                     </li>
                     <li class="menu-item menu-item_logout">
                         <a href="#">
-                            <span>Выйти</span>
+                            <span>Log Out</span>
                         </a>
                     </li>
                 </ul>
                 <ul class="sidebar-menu accounts-panel" data-widget="tree">
                     <li class="header">
-                        Счета
+                        Accounts
                         <div class="pull-right">
                             <span class="create-account label label-success">
                                 <span class="fa fa-plus"></span>
-                                Новый счёт
+                                New Account
                             </span>
                         </div>
                     </li>
@@ -96,11 +99,11 @@
         <div class="content-wrapper">
             <section class="content-header">
                 <h1>
-                    <span class="content-title">Название счёта</span>
-                    <small class="content-description">Счёт</small>
+                    <span class="content-title">Account Name</span>
+                    <small class="content-description">Account</small>
                     <button class="btn btn-danger remove-account">
                         <span class="fa fa-trash"></span>
-                        Удалить счёт
+                        Delete Account
                     </button>
                 </h1>
             </section>
@@ -113,9 +116,9 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title">Вход</h4>
+                    <h4 class="modal-title">Log In</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form" id="login-form">
@@ -123,13 +126,13 @@
                             <input type="email" class="form-control" placeholder="E-mail" name="email" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Пароль" name="password" required>
+                            <input type="password" class="form-control" placeholder="Password" name="password" required>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
-                    <button type="submit" class="btn btn-primary" form="login-form">Войти</button>
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="login-form">Enter</button>
                 </div>
             </div>
         </div>
@@ -139,26 +142,26 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title">Регистрация</h4>
+                    <h4 class="modal-title">Registration</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form" id="register-form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Имя" name="name" required>
+                            <input type="text" class="form-control" placeholder="Name" name="name" required>
                         </div>
                         <div class="form-group">
                             <input type="email" class="form-control" placeholder="E-mail" name="email" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Пароль" name="password" required>
+                            <input type="password" class="form-control" placeholder="Password" name="password" required>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
-                    <button type="submit" class="btn btn-primary" form="register-form">Зарегистрироваться</button>
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="register-form">Register</button>
                 </div>
             </div>
         </div>
@@ -168,20 +171,20 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title">Новый аккаунт</h4>
+                    <h4 class="modal-title">New Account</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form" id="new-account-form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Название" name="name" required>
+                            <input type="text" class="form-control" placeholder="Name" name="name" required>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
-                    <button type="submit" class="btn btn-primary" form="new-account-form">Создать</button>
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="new-account-form">Create</button>
                 </div>
             </div>
         </div>
@@ -191,20 +194,20 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title">Новый доход</h4>
+                    <h4 class="modal-title">New Income</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form" id="new-income-form">
                         <input name="type" type="hidden" value="income">
 
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Название" name="name" required>
+                            <input type="text" class="form-control" placeholder="Name" name="name" required>
                         </div>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Сумма" name="sum" required>
+                            <input type="text" class="form-control" placeholder="Amount" name="sum" required>
                         </div>
                         <div class="form-group">
                             <label for="income-accounts-list"></label>
@@ -213,8 +216,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
-                    <button type="submit" class="btn btn-primary" form="new-income-form">Создать</button>
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="new-income-form">Create</button>
                 </div>
             </div>
         </div>
@@ -224,20 +227,20 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title">Новый расход</h4>
+                    <h4 class="modal-title">New Expense</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form" id="new-expense-form">
                         <input name="type" type="hidden" value="expense">
 
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Название" name="name" required>
+                            <input type="text" class="form-control" placeholder="Name" name="name" required>
                         </div>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Сумма" name="sum" required>
+                            <input type="text" class="form-control" placeholder="Amount" name="sum" required>
                         </div>
 
                         <div class="form-group">
@@ -247,8 +250,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
-                    <button type="submit" class="btn btn-primary" form="new-expense-form">Создать</button>
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="new-expense-form">Create</button>
                 </div>
             </div>
         </div>
